--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div>
                     <h2><span>W</span>ELCOME <span>B</span>ACK</h2>
                     <br>
-                    <p>Find the latest and greatest in pop,country,reggae,soca,rap abd every other type of music imaginable</p>
+                    <p>Find the latest and greatest in pop,country,reggae,rap and every other type of music imaginable</p>
                 </div>
                 <br>
                 <div>
